Switch to NixOS

--- a/base/.config/gtk-3.0/settings.ini
+++ b/base/.config/gtk-3.0/settings.ini
@@ -1,5 +1,4 @@
 [Settings]
-gtk-cursor-theme-name=Breeze_Default
-gtk-enable-animations=true
+# gtk-cursor-theme-name=Breeze_Light # Only here for debugging purposes. Can probably be removed.
 gtk-icon-theme-name=Papirus
-gtk-theme-name=Skeuos-Blue-Light
+# gtk-theme-name=Skeuos-Blue-Light
