--- a/base/.config/alacritty/alacritty.toml
+++ b/base/.config/alacritty/alacritty.toml
@@ -1,3 +1,4 @@
+[general]
 import = ["/home/fabian/build/termcolors/out/colors-wal-alacritty.toml"]
 live_config_reload = true
 
@@ -10,7 +11,7 @@ builtin_box_drawing = true
 size = 12
 
 [font.normal]
-family = "MesloLGS Nerd Font Mono"
+family = "MesloLGS Nerd Font"
 style = "Regular"
 
 [window]
