Switch to kitty as main terminal

--- a/base/.config/tmux/tmux.conf
+++ b/base/.config/tmux/tmux.conf
@@ -4,6 +4,7 @@
 set -g default-terminal "tmux-256color"
 set -ga terminal-overrides ",st-256color:Tc"
 set -ga terminal-overrides ",alacritty:RGB"
+set -ga terminal-overrides ",xterm-kitty:RGB"
 
 # Set Title of the X Terminal Window, to match the title of the active tmux pane (which is set by the current shell)
 # Passes the title "trough"
