--- a/base/.config/btop/btop.conf
+++ b/base/.config/btop/btop.conf
@@ -2,7 +2,7 @@
 
 #* Name of a btop++/bpytop/bashtop formatted ".theme" file, "Default" and "TTY" for builtin themes.
 #* Themes should be placed in "../share/btop/themes" relative to binary or "$HOME/.config/btop/themes"
-color_theme = "/nix/store/m08jz0siksk3klwka7rqj20d19yvl1c8-btop-1.4.0/share/btop/themes/gruvbox_dark.theme"
+color_theme = "gruvbox_dark.theme"
 
 #* If the theme set background should be shown, set to False if you want terminal background transparency.
 theme_background = True
@@ -63,7 +63,7 @@ proc_sorting = "cpu direct"
 proc_reversed = False
 
 #* Show processes as a tree.
-proc_tree = False
+proc_tree = True
 
 #* Use the cpu graph colors in the process list.
 proc_colors = True
