Refactored AwesomeWM config
- Greatly simplified some code and made it more readable
- Removed unnecessary or rarely used code
- Switched to awesome-wm-widgets, as they are more feature complete

Also made sure to switch sound commands to more modern standards (wpctl
where possible, otherwise pactl).

Also made scanners actually work.

Plus some other minor edits.

--- a/base/.config/btop/btop.conf
+++ b/base/.config/btop/btop.conf
@@ -63,7 +63,7 @@ proc_sorting = "cpu direct"
 proc_reversed = False
 
 #* Show processes as a tree.
-proc_tree = True
+proc_tree = False
 
 #* Use the cpu graph colors in the process list.
 proc_colors = True
@@ -116,7 +116,7 @@ cpu_bottom = False
 show_uptime = True
 
 #* Show cpu temperature.
-check_temp = False
+check_temp = True
 
 #* Which sensor to use for cpu temperature, use options menu to select from list of available sensors.
 cpu_sensor = "Auto"
