--- a/base/.config/gtk-3.0/settings.ini
+++ b/base/.config/gtk-3.0/settings.ini
@@ -1,4 +1,5 @@
 [Settings]
-# gtk-cursor-theme-name=Breeze_Light # Only here for debugging purposes. Can probably be removed.
+# Only here for debugging purposes. Can probably be removed.
+# gtk-cursor-theme-name=Breeze_Light
 gtk-icon-theme-name=Papirus
 # gtk-theme-name=Skeuos-Blue-Light
