--- a/base/.config/kitty/kitty.conf
+++ b/base/.config/kitty/kitty.conf
@@ -861,7 +861,7 @@ visual_bell_color #ffffff
 #: suffix of "c" on the width/height values to have them interpreted
 #: as number of cells instead of pixels.
 
-# enabled_layouts *
+enabled_layouts splits:split_axis=auto,stack,grid
 
 #: The enabled window layouts. A comma separated list of layout names.
 #: The special value all means all layouts. The first listed layout
@@ -877,7 +877,7 @@ visual_bell_color #ffffff
 #: start_resizing_window. The cells value is used for horizontal
 #: resizing, and the lines value is used for vertical resizing.
 
-# window_border_width 0.5pt
+window_border_width 1pt
 
 #: The width of window borders. Can be either in pixels (px) or pts
 #: (pt). Values in pts will be rounded to the nearest number of pixels
@@ -938,7 +938,7 @@ visual_bell_color #ffffff
 #: The color for the border of the active window. Set this to none to
 #: not draw borders around the active window.
 
-# inactive_border_color #cccccc
+inactive_border_color #222222
 
 #: The color for the border of inactive windows.
 
@@ -947,7 +947,7 @@ visual_bell_color #ffffff
 #: The color for the border of inactive windows in which a bell has
 #: occurred.
 
-# inactive_text_alpha 1.0
+inactive_text_alpha 0.5
 
 #: Fade the text in inactive windows by the specified amount (a number
 #: between zero and one, with zero being fully faded).
@@ -2655,3 +2655,24 @@ bold_font        auto
 italic_font      auto
 bold_italic_font auto
 # END_KITTY_FONTS
+
+# TODO:
+# Vim Integration
+# Enable resize with mouse?
+# Different backgrounds for active tab?
+
+# Keybinds
+map alt+left neighboring_window left
+map alt+right neighboring_window right
+map alt+up neighboring_window up
+map alt+down neighboring_window down
+
+# TMux style new window commands
+map ctrl+a>c launch --type=tab
+map ctrl+a>s launch --location=hsplit --cwd=current
+map ctrl+a>v launch --location=vsplit --cwd=current
+map ctrl+a>a kitty_shell
+
+# Enable remote control
+allow_remote_control password
+remote_control_password "" launch
