--- a/base/.config/git/config
+++ b/base/.config/git/config
@@ -2,7 +2,7 @@
     graph = log --oneline --graph --decorate
     purr = pull --rebase
     sub = restore --staged
-    fzf = !git status --porcelain | fzf --preview=\"git diff --color=always -- {2..}\" 
+    difft = -c diff.external=difft diff
     quicksave = !git add --update && git commit -m \"Update $(git diff --staged --name-only | paste -sd ',')\"
 [core]
     editor = nvim
@@ -12,8 +12,6 @@
     ff = only
 [push]
     autoSetupRemote = true
-; [diff]
-;     external = difft
 [gpg]
     format = ssh
 [user]
