--- a/base/.config/picom/picom.conf
+++ b/base/.config/picom/picom.conf
@@ -21,7 +21,7 @@ shadow-radius = 10;
 shadow-offset-y = -8;
 shadow-offset-x = -8;
 shadow-opacity = 1;
-xinerama-shadow-crop = true;
+# xinerama-shadow-crop = true;
 shadow-exclude = [
 	"class_g = 'Polybar'",
 	"class_g = 'firefox' && argb",
